--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==4.0.4
 djangorestframework==3.14.0
+djangorestframework-camel-case==1.4.2
 gunicorn==20.1.0
 psycopg2==2.9.5
 pytz==2022.7.1
